# user-simulation-api

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
config/: api-conf.yml
data/: 2025_test_topics.json  db-schema.sql  simulation-data.csv  test-topics.json  test-users.json
data/trec-ikat25/: assessed-rubrics.csv  rubrics.csv
src/: config.py  main.py  serve.py
src/api/: auth_router.py  budget_router.py  messages.py  run_router.py
src/data/: topic.py  trec_run.py
src/security/: authenticator.py  budget_tracker.py  request_tracker.py
src/shared_task/: participant_run.py  sessions.py  shared_task.py  trec_run.py
src/simulation/: llm.py  user.py
test/: test_api.py
